--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website.'
+    description: 'Ivica Kostric personal website and CV'
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
@@ -32,10 +32,10 @@ header:
     enable: true
     blox: "navbar"
     fixed_to_top: true
-    show_search: true
-    show_theme_chooser: true
+    # show_search: true
+    # show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Ivica Kostric"
 
 # Site footer
 footer:
