--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,7 +15,7 @@ marketing:
     local_business_type: ''
     org_name: ''
     description: 'Ivica Kostric personal website and CV'
-    twitter: 'GetResearchDev'
+    # twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
